--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slider": "^1.3.5",
     "@radix-ui/react-slot": "^1.2.3",
+    "@supabase/auth-ui-react": "^0.4.7",
+    "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/supabase-js": "^2.49.10",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
