--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -6,6 +6,7 @@
     "module": "ESNext",
     "composite": true,
     "skipLibCheck": true,
+    "noEmit": true,
 
     /* Bundler mode */
     "moduleResolution": "bundler",
